feat(web): disable text highlighting

--- a/web/src/index.css
+++ b/web/src/index.css
@@ -7,6 +7,15 @@
 @tailwind components;
 @tailwind utilities;
 
+& {
+  -webkit-touch-callout: none; /* iOS Safari */
+  -webkit-user-select: none; /* Safari */
+  -khtml-user-select: none; /* Konqueror HTML */
+  -moz-user-select: none; /* Old versions of Firefox */
+  -ms-user-select: none; /* Internet Explorer/Edge */
+  user-select: none;
+}
+
 .spinner {
   animation: rotate 2s linear infinite;
   z-index: 2;
